k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pjdevops.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /task
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
